Completed all commands transitioning to Adventure API